cluster/apps/home-system/recipes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  labels:
    app.kubernetes.io/name: recipes
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: recipes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recipes
    spec:
      containers:
        - name: recipes
          image: vabene1111/recipes:1.3.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: recipes-static-files
              mountPath: /opt/recipes/staticfiles
            - name: recipes-media-files
              mountPath: /opt/recipes/mediafiles
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
      volumes:
        - name: recipes-static-files
          persistentVolumeClaim:
            claimName: recipes-static-files
        - name: recipes-media-files
          persistentVolumeClaim:
            claimName: recipes-media-files
