cluster/apps/home-system/recipes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  labels:
    app.kubernetes.io/name: recipes
    hajimari.io/enable: "true"
    hajimari.io/icon: "chef-hat"
spec:
  selector:
    app.kubernetes.io/name: recipes
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
